--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -587,6 +587,11 @@ width: 3.56em;
   .copyright p {
     font-size: 0.7em;
   }
+  /* memberships */
+
+  .membership-row{
+      width: 100%;
+  }
 }
 
 @media only screen and (max-width: 575.9px) {
