--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,12 +1,12 @@
 /* START -------------------------------------------------------- Global style */
 
-@import url("https://fonts.googleapis.com/css2?family=Nixie+One&family=Yellowtail&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Nixie+One&family=Yellowtail&display=swap');
 
 body {
   font-family: "Yellowtail", sans-serif;
   background-color: #f4f4f4;
 }
+
 /* END ---------------------------------------------------------- Global style */
 
 /* START -------------------------------------------------------- Modal style */
@@ -55,7 +55,6 @@ input {
 input:focus {
   outline: none;
 }
-
 input {
   width: inherit;
 }
@@ -122,7 +121,6 @@ ul {
     padding:5px;
 }
 
-
 /* END ---------------------------------------------------------- Navbar style */
 
 /* START -------------------------------------------------------- Video style */
@@ -172,7 +170,6 @@ ul {
   background-color: white;
   border-radius: 30px;
 }
-
 .training-button {
   color: white;
   font-family: "Nixie One", sans-serif;
@@ -200,6 +197,7 @@ ul {
 /* START -------------------------------------------------------- About style */
 
 /* headline */
+
 .about-headline {
   width: 3.05em;
 }
@@ -209,6 +207,7 @@ ul {
 }
 
 /* about us container */
+
 .about-container {
   font-family: "Nixie One", sans-serif;
   width: 90%;
@@ -261,6 +260,7 @@ h1 span {
   margin: 0 auto;
   display: block;
 }
+
 /* location backgrounds */
 
 .location1 {
@@ -296,7 +296,6 @@ h1 span {
   font-size: 3vw;
   letter-spacing: 3px;
 }
-
 .location-text-right h1 {
   padding-right: 50px;
   padding-left: 0px;
@@ -312,6 +311,7 @@ h1 span {
   padding-right: 80px;
   padding-left: 0;
 }
+
 /* location images */
 
 .desktop-location-right,
@@ -335,7 +335,6 @@ h1 span {
   width: 3.7em;
   bottom: 6px;
 }
-
 .circle {
   position: relative;
   top: 59px;
@@ -357,7 +356,6 @@ h1 span {
 .double-border3 {
   border: 7px double #e1b200;
 }
-
 .customer1 {
   border: 4px solid #4b85a8;
 }
@@ -392,6 +390,7 @@ h1 span {
 /* END ---------------------------------------------------------- Testimonials style */
 
 /* START -------------------------------------------------------- Gallery style */
+
 .gallery-headline {
   width: 2.9em;
   margin-left: 30px !important;
@@ -408,12 +407,10 @@ h1 span {
 .gallery-container img {
   object-fit: cover;
 }
-
 .img1 {
   height: 100%;
   width: 100%;
 }
-
 .img1,
 .img2,
 .img3,
@@ -430,7 +427,6 @@ h1 span {
   height: 50%;
   width: 100%;
 }
-
 .img4,
 .img5 {
   height: 50%;
@@ -492,9 +488,11 @@ iframe {
 }
 
 /* join page footer */
+
 .reduced-margin {
   margin-top: 36px;
 }
+
 /* END ---------------------------------------------------------- Join style */
 
 /* START -------------------------------------------------------- Membership style */
@@ -563,14 +561,12 @@ width: 3.56em;
     border: 1px solid #E1B200
 }
 
-
 /* END ---------------------------------------------------------- Membership style */
 
 /* START -------------------------------------------------------- Media query */
 
-/* Mobile responsiveness */
-
 @media only screen and (max-width: 450px) {
+
   /* navbar */
   .footer-collapse h1{
       font-size:21px;
@@ -583,24 +579,26 @@ width: 3.56em;
   .video-overlay {
     top: 140px;
   }
+
   /* footer */
   .copyright p {
     font-size: 0.7em;
   }
-  /* memberships */
 
+  /* memberships */
   .membership-row{
       width: 100%;
   }
 }
 
 @media only screen and (max-width: 575.9px) {
-  /* modal form */
 
+  /* modal form */
   #fname,
   #lname {
     width: 99%;
   }
+
   /* join page */
   .form-check-label {
     width: 110px;
@@ -608,8 +606,8 @@ width: 3.56em;
 }
 
 @media only screen and (max-width: 767.9px) {
-  /* navbar */
 
+  /* navbar */
   .toggler-bg-color {
     background-color: #d98100;
     opacity: 0.7;
@@ -647,7 +645,6 @@ width: 3.56em;
   }
 
   /* video */
-
   .training-video {
     z-index: 0;
   }
@@ -673,7 +670,6 @@ width: 3.56em;
   }
 
   /* location section */
-
   .desktop-location-right,
   .desktop-location-left {
     display: none;
@@ -700,6 +696,7 @@ width: 3.56em;
     display: initial;
     width: 100%;
   }
+
   /* gallery */
   .img1,
   .img2,
@@ -726,7 +723,6 @@ width: 3.56em;
     margin-top: 50px;
     float: none;
   }
-
   iframe {
     max-width: 96%;
     margin-top: 35px;
@@ -737,6 +733,9 @@ width: 3.56em;
 }
 
 @media only screen and (max-width: 1199px) {
+
+  /* gallery */
+
   .img2,
   .img3 {
     padding-right: 0;
@@ -745,9 +744,11 @@ width: 3.56em;
   .img3 {
     padding-bottom: 10px;
   }
+
 }
 
 @media only screen and (min-width: 1100px) {
+
   .modal {
     transform: scale(1.2);
   }
@@ -756,15 +757,15 @@ width: 3.56em;
   .about-container p {
     margin-right: 3em;
   }
+
   /* gallery */
   .gallery-container {
     width: 75%;
   }
 }
 
-/* large screen responsiveness */
-
 @media only screen and (min-width: 1440px) {
+
   /* modal */
   .modal {
     transform: scale(1.5);
@@ -816,15 +817,15 @@ width: 3.56em;
   }
 
   /* gallery */
-
   #gallery-scale {
     margin-left: 30px;
   }
 
   /* footer */
   .copyright p {
-    font-size: 1.5vw;
+    font-size: 1.35vw;
   }
+
   /* join page */
   .join-position {
     width: 80%;
@@ -833,6 +834,7 @@ width: 3.56em;
 }
 
 @media only screen and (min-width: 1900px) {
+
   /* modal */
   .modal {
     transform: scale(2);
@@ -858,16 +860,30 @@ width: 3.56em;
     margin: 7em auto;
   }
  
-
   /* gallery */
   #gallery-scale {
     margin-left: 70px;
   }
-  /* join page */
-  .join-position {
-    width: 60%;
-    margin: 0 auto;
+
+  /* footer */
+  .social-media i {
+    font-size: 2vw;
   }
+
+  /* join page */
+  .join-form{
+    font-size: 1.5em;
+  }
+  .form-check-input{
+      width: 82px;
+      margin-top: 0.8rem;
+  }
+
+  iframe{
+    height: 612px;
+    width: 816px;
+  }
+
   /* membership page */
    .membership-scale {
     transform: scale(1.5);
